# gatorfy

./: .gitignore  CMakeLists.txt
cmake/: catch2.cmake  ccache.cmake  clang-tidy.cmake  testing.cmake
src/: main.cpp
test/: CMakeLists.txt  blah_test.cpp
